--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -1,8 +1,10 @@
-user              <%= node[:nginx][:user] %>;
-worker_processes  <%= node[:nginx][:worker_processes] %>;
-pid               <%= node[:nginx][:pid] %>;
+user                  <%= node[:nginx][:user] %>;
+worker_processes      <%= node[:nginx][:worker_processes] %>;
+worker_rlimit_nofile  <%= node[:nginx][:worker_rlimit_nofile] %>;
+pid                   <%= node[:nginx][:pid] %>;
 
 events {
+  use_epoll;
   worker_connections  <%= node[:nginx][:worker_connections] %>;
   multi_accept        <%= node[:nginx][:multi_accept] %>;
 }
