--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -4,7 +4,7 @@ worker_rlimit_nofile  <%= node[:nginx][:worker_rlimit_nofile] %>;
 pid                   <%= node[:nginx][:pid] %>;
 
 events {
-  use_epoll;
+  use epoll;
   worker_connections  <%= node[:nginx][:worker_connections] %>;
   multi_accept        <%= node[:nginx][:multi_accept] %>;
 }
